--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 agate==1.7.1
 altair==5.1.1
+arrow==1.2.3
+astor==0.8.1
 asttokens==2.2.1
 attrs==23.1.0
 Babel==2.12.1
@@ -24,17 +26,21 @@ executing==1.2.0
 folium==0.14.0
 gitdb==4.0.10
 GitPython==3.1.37
+greenlet==2.0.2
+gw_dsl_parser==0.1.6a1
 hologram==0.0.16
 idna==3.4
 importlib-metadata==6.8.0
 ipykernel==6.25.1
 ipython==8.14.0
+ipywidgets==8.1.1
 isodate==0.6.1
 jedi==0.19.0
 Jinja2==3.1.2
 jsonschema==3.2.0
 jupyter_client==8.3.1
 jupyter_core==5.3.1
+jupyterlab-widgets==3.0.9
 leather==0.3.4
 Logbook==1.5.3
 markdown-it-py==3.0.0
@@ -71,6 +77,7 @@ pycparser==2.21
 pydantic==1.10.12
 pydeck==0.8.1b0
 Pygments==2.16.1
+pygwalker==0.3.7
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-slugify==8.0.1
@@ -83,6 +90,8 @@ rich==13.5.3
 scipy==1.11.3
 six==1.16.0
 smmap==5.0.1
+SQLAlchemy==2.0.21
+sqlglot==18.10.0
 sqlparse==0.4.4
 stack-data==0.6.2
 statsmodels==0.14.0
@@ -99,6 +108,8 @@ tzdata==2023.3
 tzlocal==5.0.1
 urllib3==1.26.16
 validators==0.22.0
+wasmtime==12.0.0
 watchdog==3.0.0
 wcwidth==0.2.6
+widgetsnbextension==4.0.9
 zipp==3.16.2
